<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_legislator"
            android:icon="@drawable/legislator"
            android:title="@string/nav_legislator" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/bill"
            android:title="@string/nav_bill" />
        <item
            android:id="@+id/nav_committee"
            android:icon="@drawable/committee"
            android:title="@string/nav_committee" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/nav_favorite" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_me"
                android:title="@string/nav_about_me" />
        </menu>
    </item>

</menu>